unpackaged/main/default/objects/Assignee__c/Assignee__c.object-meta.xml
<CustomObject>
    <label>Assignee</label>
    <nameField>
        <label>Assignee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>