unpackaged/main/default/objects/Assignee__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Assignee</label>
    <type>Checkbox</type>
</CustomField>