unpackaged/main/default/objects/Assignee__c/fields/Assignment_Rule__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Rule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Assignment Rule</label>
    <referenceTo>Assignment_Rule__c</referenceTo>
    <relationshipLabel>Assignees</relationshipLabel>
    <relationshipName>Assignees</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>