unpackaged/main/default/objects/Assignee__c/fields/Last_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Last_Assigned__c</fullName>
    <defaultValue>DATETIMEVALUE(&quot;1900-11-15 12:00:00&quot;)</defaultValue>
    <label>Last Assigned</label>
    <type>DateTime</type>
</CustomField>